Fri Mar 18 18:13:49 1994  Jeffrey A. Law  (law@snake.cs.utah.edu)

        * Better long-filename handling.  Reads SOM ABI compliant extended
	names, but doesn't quite write compliant extended names yet.
	* som.c (som_slurp_extended_name_table): Delete function.  The
	generic code will handle things correctly.
	(som_slurp_armap): Seek to the beginning of the next member.
	(normalize): New function.
	(som_bfd_ar_write_symbol_stuff): Take the size of the extended
	name table into account when computing the file offsets in the
	SOM dictionary.  Make sure to align to an even boundary.
	(som_write_armap): Initialize the checksum to zero.
	(ar_maxchars): Fix.  Opps.

Fri Mar 18 20:35:24 1994  Ken Raeburn  (raeburn@cujo.cygnus.com)

	* aoutx.h (reloc_type_lookup): Handle BFD_RELOC_CTOR on a 64-bit
	machine.  Handle BFD_RELOC_SPARC13 and BFD_RELOC_SPARC_BASE13.

Thu Mar 17 18:26:46 1994  Ken Raeburn  (raeburn@cujo.cygnus.com)

	* bfd-in.h (BFD_VERSION): Use @VERSION@.
	* Makefile.in (bfd.h): Replace it with contents of VERSION file.
	* bfd-in2.h: Regenerated.

	* trad-core.c (trad_unix_bfd_is_local_label): Fixed typo where
	this was also named trad_unix_bfd_copy_private_bfd_data.

Thu Mar 17 10:37:07 1994  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* aoutx.h, elfcode.h, coff-alpha.c, bout.c, ecoff.c, ecofflink.c,
	elf32-hppa.c, elf32-mips.c, linker.c, som.c, sunos.c: If malloc(0)
	returns NULL, it is not an error.  It's possible that some of
	these checks are not necessary (because the size can never be
	zero), but putting in the checks is the conservative thing to do
	in light of the fact that some of these malloc calls replaced
	unchecked alloca calls, in which a zero argument would work fine.

Thu Mar 17 11:44:45 1994  Ian Lance Taylor  (ian@tweedledumb.cygnus.com)

	* osf-core.c (osf_core_bfd_copy_private_bfd_data): Remove
	duplicate definition.
	(osf_core_bfd_is_local_label): Define.

	* reloc.c (bfd_generic_get_relocated_section_contents): Don't fail