@@ -1,5 +1,14 @@
 Fri Mar 18 18:13:49 1994  Jeffrey A. Law  (law@snake.cs.utah.edu)
 
+	* libhppa.h (PA_PAGESIZE): Define.
+
+	* som.c (SOM_ALIGN): Define.
+	(som_begin_writing): If writing an executable, initialize all
+	fields in the exec header to zero.  Update fields in the exec
+	header as sizes of loadable subspaces are computed.  Carefully
+	preserve alignments when building executables.  Actually write the
+	exec after all the fields are filled in.
+
         * Better long-filename handling.  Reads SOM ABI compliant extended
 	names, but doesn't quite write compliant extended names yet.
 	* som.c (som_slurp_extended_name_table): Delete function.  The
